--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^3.0.1
   cached_network_image: ^3.2.1
   introduction_screen: ^3.0.2
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
